--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,4 +1,7 @@
-# upstream必須置於server外，但位於http區塊內，因此此設定正確：
+# 修正：將 upstream 定義移至 server 外部，並正確設定對應容器名稱與埠號
+# 確認每個 upstream 名稱在 proxy_pass 中被正確引用
+# 以及在 server 區塊內新增對應的 location 設定以轉發請求
+
 upstream suzoo_express {
     server suzoo_express:3000;
 }
@@ -13,65 +16,43 @@ upstream suzoo_fastapi {
 
 server {
     listen 80;
-    listen [::]:80;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    server_name suzookaizokuhunter.com;
+    # 將 HTTP 流量重新導向到 HTTPS
     return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    listen 443 ssl;
+    server_name suzookaizokuhunter.com;
 
-    resolver 127.0.0.11 valid=30s;
-
+    # SSL 憑證與私鑰路徑（需確認檔案已正確掛載至容器）
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-
-    ssl_session_timeout 5m;
-    ssl_session_cache shared:SSL:50m;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
-    client_max_body_size 200M;
-
-    location / {
-        try_files $uri $uri/ @reactfallback;
-    }
-    location @reactfallback {
-        proxy_pass http://suzoo_react;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /auth/ {
-        proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
+    # 將 /api/ 底下的請求轉發到 Express 容器
     location /api/ {
-        proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
+        proxy_pass http://suzoo_express/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /api/py/ {
-        proxy_pass http://suzoo_fastapi;
-        proxy_http_version 1.1;
+    # 將 /fastapi/ 底下的請求轉發到 FastAPI 容器
+    location /fastapi/ {
+        proxy_pass http://suzoo_fastapi/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # 將其餘請求轉發到 React 前端容器
+    location / {
+        proxy_pass http://suzoo_react;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # 如 React 前端使用 SPA，需要讓未知路徑回傳 index.html，可視需要調整配置
     }
 }
