--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,7 +1,6 @@
-# 修正：將 upstream 定義移至 server 外部，並正確設定對應容器名稱與埠號
-# 確認每個 upstream 名稱在 proxy_pass 中被正確引用
-# 以及在 server 區塊內新增對應的 location 設定以轉發請求
-
+########################################
+# upstream 服務 (Docker 內部 DNS)
+########################################
 upstream suzoo_express {
     server suzoo_express:3000;
 }
@@ -14,45 +13,94 @@ upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
 
+
+########################################
+# 80 => 301 => HTTPS
+########################################
 server {
     listen 80;
-    server_name suzookaizokuhunter.com;
-    # 將 HTTP 流量重新導向到 HTTPS
+    listen [::]:80;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
 }
 
-server {
-    listen 443 ssl;
-    server_name suzookaizokuhunter.com;
 
-    # SSL 憑證與私鑰路徑（需確認檔案已正確掛載至容器）
+########################################
+# HTTPS 443: 實際服務
+########################################
+server {
+    listen 443 ssl;      # 不再使用 listen ... http2
+    listen [::]:443 ssl; # 不再使用 listen ... http2
+    http2 on;            # 開啟 HTTP/2
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+
+    # Docker 內部 DNS
+    resolver 127.0.0.11 valid=30s;
+
+    # SSL 憑證 (Let's Encrypt)
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-    ssl_protocols       TLSv1.2 TLSv1.3;
+
+    # SSL 強化
+    ssl_session_timeout 5m;
+    ssl_session_cache shared:SSL:50m;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # 將 /api/ 底下的請求轉發到 Express 容器
-    location /api/ {
-        proxy_pass http://suzoo_express/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    # 建議使用 HSTS
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # 將 /fastapi/ 底下的請求轉發到 FastAPI 容器
-    location /fastapi/ {
-        proxy_pass http://suzoo_fastapi/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    # 大檔上傳限制
+    client_max_body_size 200M;
 
-    # 將其餘請求轉發到 React 前端容器
+
+    ########################################
+    # React 前端 => fallback SPA
+    ########################################
     location / {
-        proxy_pass http://suzoo_react;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # 如 React 前端使用 SPA，需要讓未知路徑回傳 index.html，可視需要調整配置
+        try_files $uri $uri/ @reactfallback;
     }
+
+    location @reactfallback {
+        proxy_pass http://suzoo_react;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    ########################################
+    # Express (/auth, /api)
+    ########################################
+    location /auth/ {
+        proxy_pass http://suzoo_express;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location /api/ {
+        proxy_pass http://suzoo_express;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    ########################################
+    # FastAPI (/api/py/)
+    ########################################
+    location /api/py/ {
+        proxy_pass http://suzoo_fastapi;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
 }
