--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,8 @@
-FROM nginx:latest
+FROM nginx:stable
+
+# 複製我們自訂的 suzoo.conf
 COPY suzoo.conf /etc/nginx/conf.d/suzoo.conf
-EXPOSE 80 443
+
+# Optional Healthcheck
+HEALTHCHECK --interval=30s --timeout=5s --retries=3 \
+  CMD curl -f http://localhost/ || exit 1
