--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,5 +1,5 @@
 ########################################
-# upstream 服務 (Docker 內部 DNS)
+# upstream
 ########################################
 upstream suzoo_express {
     server suzoo_express:3000;
@@ -15,7 +15,7 @@ upstream suzoo_fastapi {
 
 
 ########################################
-# 80 => 301 => HTTPS
+# HTTP => 301 => HTTPS
 ########################################
 server {
     listen 80;
@@ -24,83 +24,70 @@ server {
     return 301 https://$host$request_uri;
 }
 
-
 ########################################
-# HTTPS 443: 實際服務
+# HTTPS
 ########################################
 server {
-    listen 443 ssl;      # 不再使用 listen ... http2
-    listen [::]:443 ssl; # 不再使用 listen ... http2
-    http2 on;            # 開啟 HTTP/2
+    listen 443 ssl; 
+    listen [::]:443 ssl;
+    http2 on;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
     # Docker 內部 DNS
     resolver 127.0.0.11 valid=30s;
 
-    # SSL 憑證 (Let's Encrypt)
+    # SSL 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-    # SSL 強化
     ssl_session_timeout 5m;
     ssl_session_cache shared:SSL:50m;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # 建議使用 HSTS
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # 大檔上傳限制
     client_max_body_size 200M;
 
-
-    ########################################
-    # React 前端 => fallback SPA
-    ########################################
+    # React => fallback
     location / {
         try_files $uri $uri/ @reactfallback;
     }
-
     location @reactfallback {
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ########################################
-    # Express (/auth, /api)
-    ########################################
+    # Express => /auth, /api
     location /auth/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     location /api/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ########################################
-    # FastAPI (/api/py/)
-    ########################################
+    # FastAPI => /api/py/
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-
 }
