--- a/express/package.json
+++ b/express/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.1",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "web3": "^1.10.0" 
   }
 }
