--- a/express/package.json
+++ b/express/package.json
@@ -1,7 +1,7 @@
 {
   "name": "suzoo-express",
   "version": "1.0.0",
-  "description": "Suzoo Express server with register/login, file upload, blockchain, trademark check, etc.",
+  "description": "...",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -20,6 +20,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.1",
     "sharp": "^0.32.1",
-    "web3": "^1.10.0" 
+    "web3": "^1.10.0",
+    "joi": "^17.9.2"          
   }
 }
