--- a/express/package.json
+++ b/express/package.json
@@ -1,7 +1,7 @@
 {
   "name": "suzoo-express",
   "version": "1.0.0",
-  "description": "...",
+  "description": "Soozoo Express server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -15,12 +15,12 @@
     "ethers": "^6.6.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "joi": "^17.9.2",      
     "multer": "^1.4.5-lts.1",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.1",
     "sharp": "^0.32.1",
-    "web3": "^1.10.0",
-    "joi": "^17.9.2"          
+    "web3": "^1.10.0"
   }
 }
