--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,5 +1,5 @@
 ########################################
-# upstream
+# upstream (Docker 內部服務)
 ########################################
 upstream suzoo_express {
     server suzoo_express:3000;
@@ -13,7 +13,6 @@ upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
 
-
 ########################################
 # HTTP => 301 => HTTPS
 ########################################
@@ -25,10 +24,10 @@ server {
 }
 
 ########################################
-# HTTPS
+# HTTPS (443)
 ########################################
 server {
-    listen 443 ssl; 
+    listen 443 ssl;
     listen [::]:443 ssl;
     http2 on;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
@@ -36,7 +35,7 @@ server {
     # Docker 內部 DNS
     resolver 127.0.0.11 valid=30s;
 
-    # SSL 憑證
+    # SSL 憑證掛載路徑
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -46,11 +45,14 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
+    # 建議 HSTS
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     client_max_body_size 200M;
 
-    # React => fallback
+    ######################################
+    # React 前端 => fallback
+    ######################################
     location / {
         try_files $uri $uri/ @reactfallback;
     }
@@ -63,7 +65,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    ######################################
     # Express => /auth, /api
+    ######################################
     location /auth/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
@@ -81,7 +85,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    ######################################
     # FastAPI => /api/py/
+    ######################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
         proxy_http_version 1.1;
