--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -2,16 +2,14 @@ FROM node:18
 
 WORKDIR /app
 
-# 先複製 package.json / package-lock.json
+# 先複製 package*.json，以安裝依賴 (包含 joi)
 COPY package*.json ./
 
-# 安裝所有 dependencies（包含 web3）
 RUN npm install
 
-# 複製整個 express 原始碼
+# 再複製整個 express 原始碼
 COPY . .
 
-# 預設由 server.js 或 app.js 等檔案啟動
 EXPOSE 3000
 
-CMD ["npm", "run", "start"]
+CMD ["npm", "start"]
