--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -35,7 +35,7 @@ server {
     # Docker 內部 DNS
     resolver 127.0.0.11 valid=30s;
 
-    # SSL 憑證掛載路徑
+    # SSL 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
