--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -14,7 +14,7 @@ upstream suzoo_fastapi {
 }
 
 ########################################
-# HTTP => 301 => HTTPS
+# HTTP → 301 → HTTPS
 ########################################
 server {
     listen 80;
@@ -24,7 +24,7 @@ server {
 }
 
 ########################################
-# HTTPS (443)
+# HTTPS 主機設定
 ########################################
 server {
     listen 443 ssl;
@@ -35,65 +35,47 @@ server {
     # Docker 內部 DNS
     resolver 127.0.0.11 valid=30s;
 
-    # SSL 憑證
+    # SSL 憑證（Let’s Encrypt）
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
     ssl_session_timeout 5m;
-    ssl_session_cache shared:SSL:50m;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_session_cache   shared:SSL:50m;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
-
-    # 建議 HSTS
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     client_max_body_size 200M;
 
     ######################################
-    # React 前端 => fallback
+    # React 前端 SPA
     ######################################
     location / {
         try_files $uri $uri/ @reactfallback;
     }
     location @reactfallback {
         proxy_pass http://suzoo_react;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        include /etc/nginx/proxy_params;
     }
 
     ######################################
-    # Express => /auth, /api
+    # Express API (/auth, /api)
     ######################################
     location /auth/ {
         proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        include /etc/nginx/proxy_params;
     }
     location /api/ {
         proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        include /etc/nginx/proxy_params;
     }
 
     ######################################
-    # FastAPI => /api/py/
+    # FastAPI (/api/py/)
     ######################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        include /etc/nginx/proxy_params;
     }
 }
