--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,17 +1,37 @@
-upstream suzoo_express { server suzoo_express:3000; }
-upstream suzoo_react { server suzoo_react:3000; }
-upstream suzoo_fastapi { server suzoo_fastapi:8000; }
+# ============ 定義 upstream ==============
+upstream suzoo_express {
+    server suzoo_express:3000;
+}
 
+upstream suzoo_react {
+    server suzoo_react:3000;
+}
+
+upstream suzoo_fastapi {
+    server suzoo_fastapi:8000;
+}
+
+########################################################
+# HTTP => 強制轉 HTTPS
+########################################################
 server {
     listen 80;
+    listen [::]:80;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
 }
 
+########################################################
+# HTTPS 主機設定
+########################################################
 server {
     listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
+    resolver 127.0.0.11 valid=30s;
+
+    # SSL 憑證 (Let's Encrypt)
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -20,43 +40,56 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
-    add_header Strict-Transport-Security "max-age=31536000" always;
+
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     client_max_body_size 200M;
 
+    ####################################################
+    # React 前端 SPA fallback
+    ####################################################
     location / {
         try_files $uri $uri/ @reactfallback;
     }
-
     location @reactfallback {
         proxy_pass http://suzoo_react;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    ####################################################
+    # Express API (/auth, /api)
+    ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /api/ {
         proxy_pass http://suzoo_express;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    ####################################################
+    # FastAPI (Python API)
+    ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
