--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
 services:
-  ####################################################################
-  # 1) PostgreSQL (資料庫)
-  ####################################################################
+  ########################################
+  # 1) PostgreSQL
+  ########################################
   suzoo_postgres:
     image: postgres:15-alpine
     container_name: suzoo_postgres
-    env_file:
-      - .env
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -17,13 +15,13 @@ services:
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -h localhost"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -h localhost || exit 1"]
       interval: 5s
       retries: 5
 
-  ####################################################################
-  # 2) Ganache (ETH)
-  ####################################################################
+  ########################################
+  # 2) Ganache (ETH 私有鏈)
+  ########################################
   suzoo_ganache:
     image: trufflesuite/ganache-cli:latest
     container_name: suzoo_ganache
@@ -40,9 +38,9 @@ services:
     volumes:
       - suzoo_ganache_data:/data
 
-  ####################################################################
+  ########################################
   # 3) IPFS (Kubo)
-  ####################################################################
+  ########################################
   suzoo_ipfs:
     image: ipfs/go-ipfs:latest
     container_name: suzoo_ipfs
@@ -55,9 +53,9 @@ services:
     networks:
       - suzoo_net
 
-  ####################################################################
-  # 4) FastAPI (Python)
-  ####################################################################
+  ########################################
+  # 4) FastAPI
+  ########################################
   suzoo_fastapi:
     build:
       context: ./fastapi
@@ -73,11 +71,14 @@ services:
       - "8000"
     networks:
       - suzoo_net
-    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
+      interval: 10s
+      retries: 5
 
-  ####################################################################
-  # 5) Express (Node.js)
-  ####################################################################
+  ########################################
+  # 5) Express (後端)
+  ########################################
   suzoo_express:
     build:
       context: ./express
@@ -94,11 +95,14 @@ services:
       - "3000"
     networks:
       - suzoo_net
-    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:3000/health || exit 1"]
+      interval: 10s
+      retries: 5
 
-  ####################################################################
+  ########################################
   # 6) React (前端)
-  ####################################################################
+  ########################################
   suzoo_react:
     build:
       context: ./frontend
@@ -112,14 +116,17 @@ services:
     expose:
       - "3000"
     ports:
-      - "3001:3000"
+      - "3001:3000"  # 外部看前端可改3001
     networks:
       - suzoo_net
-    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:3000 || exit 1"]
+      interval: 10s
+      retries: 5
 
-  ####################################################################
-  # 7) Nginx (對外)
-  ####################################################################
+  ########################################
+  # 7) Nginx (對外: 80/443)
+  ########################################
   suzoo_nginx:
     build:
       context: ./nginx
@@ -134,11 +141,15 @@ services:
       - "443:443"
     volumes:
       - ./nginx/suzoo.conf:/etc/nginx/conf.d/suzoo.conf:ro
-      # 若您有 Let's Encrypt 憑證 => 挂載
+      # SSL 憑證: 確保主機端有 /etc/letsencrypt/live/suzookaizokuhunter.com
       - /etc/letsencrypt/live/suzookaizokuhunter.com:/etc/letsencrypt/live/suzookaizokuhunter.com:ro
     networks:
       - suzoo_net
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost/ || exit 1"]
+      interval: 10s
+      retries: 5
 
 networks:
   suzoo_net:
