--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,12 +1,10 @@
-user  nginx;
-worker_processes auto;
+# ============================
+# suzoo.conf
+# (放於 /etc/nginx/conf.d/ 內)
+# ============================
 
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
-
-events {
-  worker_connections 1024;
-}
+# 在 conf.d/*.conf 檔中，請勿放 'user', 'worker_processes', 'events' 等指令
+# 這些應在 /etc/nginx/nginx.conf 中的 main context 或由官方映像檔預設提供
 
 http {
   # ============ 定義 upstream ==============
@@ -30,14 +28,12 @@ http {
 
   # ============ HTTPS 主機設定 ============
   server {
-      # 若擔心 [warn] the "listen ... http2" directive is deprecated
-      # 可改成:
-      #   listen 443 ssl;
-      #   http2 on;
+      # 您可改用: listen 443 ssl; http2 on; 以避免 [warn] "listen ... http2" directive
       listen 443 ssl http2;
       listen [::]:443 ssl http2;
       server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
+      # Docker 內 DNS resolver
       resolver 127.0.0.11 valid=30s;
 
       # SSL 憑證 (Let's Encrypt)
@@ -45,13 +41,14 @@ http {
       ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
       ssl_session_timeout 5m;
-      ssl_session_cache shared:SSL:50m;
-      ssl_protocols TLSv1.2 TLSv1.3;
-      ssl_ciphers HIGH:!aNULL:!MD5;
+      ssl_session_cache   shared:SSL:50m;
+      ssl_protocols       TLSv1.2 TLSv1.3;
+      ssl_ciphers         HIGH:!aNULL:!MD5;
       ssl_prefer_server_ciphers on;
 
       add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
+      # 您可調整上傳檔案大小上限
       client_max_body_size 200M;
 
       ####################################################
