--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -9,17 +9,15 @@
 #   - http { }
 #
 # 這些都屬於 Nginx 主設定 (main context)，
-# 由 Docker 官方映像檔或 /etc/nginx/nginx.conf 預設提供。
+# 已在官方 Docker Nginx /etc/nginx/nginx.conf 預設提供
 
 # ============ 定義 upstream ============
 upstream suzoo_express {
     server suzoo_express:3000;
 }
-
 upstream suzoo_react {
     server suzoo_react:3000;
 }
-
 upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
@@ -34,15 +32,14 @@ server {
 
 # ============ HTTPS 主機設定 ============
 server {
-    # 若您擔心 [warn] "listen ... http2" directive is deprecated
-    # 可改成:
-    #   listen 443 ssl;
-    #   http2 on;
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    # 使用 listen 443 ssl; + http2 on; 以避免 [warn] "listen ... http2" directive is deprecated
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # Docker 內 DNS resolver
+    # Docker 內 DNS
     resolver 127.0.0.11 valid=30s;
 
     # SSL 憑證 (Let's Encrypt)
@@ -55,7 +52,7 @@ server {
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # HSTS
+    # 強制 HSTS
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # 可調整上傳檔案大小限制
