--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -8,7 +8,6 @@
 #   - events { }
 #   - http { }
 #
-# 這些都屬於 Nginx 主設定 (main context)，
 # 已在官方 Docker Nginx /etc/nginx/nginx.conf 預設提供
 
 # ============ 定義 upstream ============
@@ -32,7 +31,7 @@ server {
 
 # ============ HTTPS 主機設定 ============
 server {
-    # 使用 listen 443 ssl; + http2 on; 以避免 [warn] "listen ... http2" directive is deprecated
+    # 避免 http2 directive deprecation
     listen 443 ssl;
     listen [::]:443 ssl;
     http2 on;
@@ -52,10 +51,10 @@ server {
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # 強制 HSTS
+    # HSTS
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # 可調整上傳檔案大小限制
+    # 上傳檔案大小限制
     client_max_body_size 200M;
 
     ####################################################
