--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -12,6 +12,8 @@
 
 # ============ 定義 upstream ============
 upstream suzoo_express {
+    # ★ 一般可直接 server suzoo_express:3000;
+    # ★ 若 DNS 無法解析，可臨時改 "soozookaizokuhunter-suzoo_express-1:3000"
     server suzoo_express:3000;
 }
 upstream suzoo_react {
