--- a/express/package.json
+++ b/express/package.json
@@ -14,8 +14,9 @@
     "dotenv": "^16.3.1",
     "ethers": "^6.6.0",
     "express": "^4.18.2",
+    "ipfs-http-client": "^59.0.0",     
     "jsonwebtoken": "^9.0.0",
-    "joi": "^17.9.2",      
+    "joi": "^17.9.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
