--- a/express/package.json
+++ b/express/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.3.1",
     "ethers": "^6.6.0",
     "express": "^4.18.2",
-    "ipfs-http-client": "^56.0.3",     
+    // ★ 鎖定 56.0.3 以支援 CommonJS
+    "ipfs-http-client": "56.0.3",
     "jsonwebtoken": "^9.0.0",
     "joi": "^17.9.2",
     "multer": "^1.4.5-lts.1",
