--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,37 +1,27 @@
-# frontend/Dockerfile
+# 使用較小的 Node 映像進行建置階段
+FROM node:16-alpine AS build
 
-########################
-# 1) Builder Stage
-########################
-FROM node:16-alpine AS builder
-
+# 設定工作目錄並複製專案依賴檔案
 WORKDIR /app
-
-# 先複製 package.json 和 package-lock.json
 COPY package*.json ./
-
-# ★ 在此鎖定 jwt-decode 版本（確保為 4.x）
-RUN npm install jwt-decode@4.0.0
-
-# 再安裝其他依賴
 RUN npm install
 
-# 複製剩餘前端程式碼
+# 複製其餘前端程式碼並進行生產版本建置
 COPY . .
-
-# 正式編譯
 RUN npm run build
 
-########################
-# 2) Production Stage
-########################
-FROM nginx:alpine
+# 使用輕量級的 Node 映像作為產品階段，僅包含靜態檔案與伺服器
+FROM node:16-alpine AS production
 
-# 直接將 build 出來的靜態檔部署到 Nginx 預設靜態目錄
-COPY --from=builder /app/build /usr/share/nginx/html
+# 安裝 serve 套件作為靜態檔案伺服器
+RUN npm install -g serve
 
-# 若您有自訂 Nginx 配置，可放在 /etc/nginx/conf.d/*.conf
-# 但通常 docker-compose 會掛載 suzoo.conf，這裡就不再重複
+# 複製前一階段的建置產物到容器中
+WORKDIR /app
+COPY --from=build /app/build ./build
 
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# 將伺服器監聽埠設定為 3000（與 Nginx proxy 設定相符）
+EXPOSE 3000
+
+# 以 serve 啟動靜態文件伺服（SPA 模式確保對所有路徑提供 index.html）
+CMD ["serve", "-s", "build", "-l", "3000"]
